applications/demo-linux-k8s-networking/manifests/base-config/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    openshift.io/description: "K8s Networking Demo Project"
    openshift.io/display-name: K8s Networking Demo Project
    argocd.argoproj.io/sync-wave: "1"
  name: demo-linux-k8s-networking
