applications/demo-linux-k8s-networking/manifests/base-config/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-vmpool-linux
  namespace: demo-linux-k8s-networking
  annotations:
    argocd.argoproj.io/sync-wave: "20"
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    kubevirt.io/vmpool: vmpool-linux
  type: ClusterIP
